# el4107-project2

./: .gitignore  README.md  setup.cfg
camclient/: __main__.py
camserver/: logger.py
camserver/core/: sv_core.py  user_handle.py
camsv/: configs.py
camsv/core/: sv_core.py  user_handle.py
src/cam_client/: __main__.py
src/cam_client/core/: client_core.py  proxy_handle.py
src/cam_common/: __init__.py  configs.py  logger.py  requests.py  signals.py  utils.py
src/cam_server/: __main__.py
src/cam_server/core/: resource_assigner.py  server_core.py  sv_core.py  user_handle.py
src/cam_server/database/: __init__.py  constants.py  database.py
src/cam_server/database/files/: user_db.json
src/cam_user/: __main__.py
src/cam_user/core/: client_core.py  packet_handle.py  user_core.py
src/camclient/: __main__.py
src/camclient/core/: client_core.py  packet_handle.py
src/camcommon/: __init__.py  configs.py  signals.py
src/camserver/: __main__.py
src/camserver/core/: resource_assigner.py  sv_core.py  user_handle.py
src/camserver/database/: __init__.py  constants.py  database.py  user_db.json
src/camserver/database/files/: user_db.json
