[metadata]
name = camgrill
description = Online camera service
author = Cristóbal Allendes
license = MIT Licente
license_file = LICENSE
platforms = supported-platforms
version = 0.3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

# These options can be changed according to your project
[options]
packages =
    camclient
    camclient.core
    camserver
    camserver.core
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
camclient = py.typed
camserver = py.typed
