[metadata]
name = camgrill
description = Online camera service
author = Cristóbal Allendes
license = MIT Licente
license_file = LICENSE
platforms = supported-platforms
version = 0.3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

# These options can be changed according to your project
[options]
packages =
    cam_user
    cam_user.core
    cam_user.logs
    cam_common
    cam_client
    cam_client.logs
    cam_server
    cam_server.core
    cam_server.database
    cam_server.logs
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
cam_user = py.typed
cam_common = py.typed
cam_server = py.typed
